[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"

# Languages (add more later)
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
blake3 = "1.8.3"
