[package]
name = "context"
version = "0.1.0"
edition = "2021"
authors = ["Kaushal Choudhary <kaushalc64@gmail.com>"]
license = "MIT"
description = "Builds a structured semantic context index for a code repository"
homepage = "https://github.com/kaushal07wick/context"
repository = "https://github.com/kaushal07wick/context"
readme = "README.md"
keywords = ["code-analysis", "context", "indexing", "static-analysis", "agent"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
blake3 = "1.8.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "context"
path = "src/main.rs"
